--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -19,6 +19,7 @@
     <%= f.label :location_id %><br />
     <%= f.number_field :location_id %>
   </div>
+  <div>
   <div class="actions">
     <%= f.submit %>
   </div>
