--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hate2wait2</title>
+  <title><%= full_title(yield(:title)) %>></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
+  <%= render 'layouts/shim' %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 </head>
 <body>
-
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
-<%= yield %>
-<%= yield :scripts %>
+  <%= render 'layouts/header' %>
+  <div class="container">
+    <h1><%= yield(:title) %></h1>
+    <%= yield %>
+    <%= yield :scripts %>
+    <%= render 'layouts/footer' %>
+  </div>
 
 </body>
 </html>
