--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -10,6 +10,10 @@
   <%= @location.capacity %>
 </p>
 
+<p>
+  <%= get_seats_number(1) %> seats has been taken! <br>
+</p>
+
 <div id="seats">
   <%= render :partial=>"seat_list", :locals=>{:seats=>@location.seats} %>
 </div>
