--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <%= get_seats_number(1) %> seats has been taken! <br>
+  <%= get_seats_number(@location.id) %> seats has been taken! <br>
 </p>
 
 <div id="seats">
