--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    <a href="http://hate2wait.herokuapp.com/">Hate2wait</a>
+    by Jacky Chen
   </small>
   <nav> <ul>
     <li><%= link_to "About", about_path %></li>
     <li><%= link_to "Contact", contact_path %></li>
-    <li><a href="http://news.railstutorial.org/">News</a></li>
+    <li><a href="http://google.com/">Google</a></li>
   </ul> </nav>
 </footer>
