--- a/app/views/locations/_seat_list.html.erb
+++ b/app/views/locations/_seat_list.html.erb
@@ -1,12 +1,15 @@
-<h1>Listing seats</h1>
+</br>
+<h3>Taken seats:</h3>
+
+</br>
 
 <table>
   <tr>
     <th>Customer</th>
     <th>Location ID</th>
   </tr>
-
-  <% for seat in seats %>
+  <% if seats.size != 0 %>
+    <% for seat in seats %>
       <tr>
         <td><%=h seat.name %></td>
         <td><%=h seat.location_id %></td>
@@ -14,5 +17,9 @@
         <td><%= link_to 'Edit', edit_seat_path(seat) %></td>
         <td><%= link_to 'Destroy', seat, :confirm => 'Are you sure?', :method => :delete %></td>
       </tr>
+    <% end %>
   <% end %>
 </table>
+
+</br>
+</br>
