--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,12 @@
 <% provide(:title, 'Save time today!') %>
 <div class="center hero-unit">
   <h2>welcom to
-    <a href="http://hate2wait2.herokuapp.com/">Hate2Wait</a>
+    <a href="http://hate2wait.herokuapp.com/">Hate2Wait</a>
     ! Enjoy!
   </h2>
   <%= link_to "Sign up now!", '/users/sign_up', class: "btn btn-large btn-primary" %> </div>
-<%= link_to image_tag("hate2wait_s.png", alt: "Rails"), 'http://hate2wait2.herokuapp.com/' %>
+  <h3> See
+    <a href="http://hate2wait.herokuapp.com/locations">locations</a>
+  </h3>
+</br>
+<%= link_to image_tag("hate2wait_s.png", alt: "Rails"), 'http://hate2wait.herokuapp.com/' %>
