push to heroku1

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <li><%= link_to "About", about_path%></li>
           <li><%= link_to "Contact", contact_path %></li>
           <li><%= link_to "Help", help_path %></li>
-          <li><%= link_to "rest", rest_path %></li>
+          <li><%= link_to "Rest", restful_path %></li>
           <li><%= link_to "Sign in", '/users/sign_in' %></li>
         </ul> </nav>
     </div>
