--- a/app/views/locations/_seat_list.html.erb
+++ b/app/views/locations/_seat_list.html.erb
@@ -3,6 +3,16 @@
 
 </br>
 
+<p>
+  <b><%= get_seats_number %></b>
+  seats has been taken! <br>
+</p>
+
+<p>
+  <b><%= get_left_seats %></b>
+  seats are available! <br>
+</p>
+
 <table>
   <tr>
     <th>Customer</th>
