--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
     <a href="http://hate2wait.herokuapp.com/">Hate2Wait</a>
     ! Enjoy!
   </h2>
-  <%= link_to "Sign up now!", '/users/sign_up', class: "btn btn-large btn-primary" %> </div>
+  <%= link_to "Sign up now!", "/users/sign_up", class: "btn btn-large btn-primary" %> </div>
   <h3> See
     <a href="http://hate2wait.herokuapp.com/locations">locations</a>
   </h3>
